(feat.) add 'Delta' to the list of auto update channels

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -29,5 +29,17 @@
   },
   "hideOfflineHosts": {
     "message": "Hide offline devices"
+  },
+  "deltaChannelOption": {
+    "message": "Delta"
+  },
+  "deltaChannelName": {
+    "message": "Delta channel"
+  },
+  "deltaChannelShortText": {
+    "message": "Select this if you know what you're doing"
+  },
+  "deltaChannelText": {
+    "message": "Select this if you know what you're doing"
   }
 }
