--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -29,5 +29,17 @@
   },
   "hideOfflineHosts": {
     "message": "Скрывать неподключенные устройства"
+  },
+  "deltaChannelOption": {
+    "message": "Delta"
+  },
+  "deltaChannelName": {
+    "message": "Канал Delta"
+  },
+  "deltaChannelShortText": {
+    "message": "Выберите этот канал, если вы знаете, что делаете."
+  },
+  "deltaChannelText": {
+    "message": "Выберите этот канал, если вы знаете, что делаете."
   }
 }
