--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -266,5 +266,11 @@
   },
   "otherConnections_pointToPoint_editor_field_ipsecIkev2_hint": {
     "message": "Использование IKEv2 помогает уменьшить задержки и повысить стабильность соединения. Необходимо использовать одинаковый идентификатор (ID) интерфейса с обеих сторон туннеля. Обратите внимание, что не все реализации могут поддерживать этот режим."
+  },
+  "rebootScheduleLabel": {
+    "message": "Расписание перезагрузки"
+  },
+  "rebootScheduleNoScheduleOption": {
+    "message": "Не задано"
   }
 }
