--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -65,5 +65,11 @@
   },
   "HECErrorsInterleaved": {
     "message": "HEC hataları"
+  },
+  "rebootScheduleLabel": {
+    "message": "Yeniden başlatma programı"
+  },
+  "rebootScheduleNoScheduleOption": {
+    "message": "Belirtilmemiş"
   }
 }
