(feat.) uiExtension/tracerouteViaInterface: allow to specify source address for traceroute

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -272,5 +272,11 @@
   },
   "rebootScheduleNoScheduleOption": {
     "message": "Not set"
+  },
+  "tracerouteViaLabel": {
+    "message": "Via interface"
+  },
+  "tracerouteViaAnyOption": {
+    "message": "Any"
   }
 }
