--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -272,5 +272,11 @@
   },
   "rebootScheduleNoScheduleOption": {
     "message": "Не задано"
+  },
+  "tracerouteViaLabel": {
+    "message": "Через интерфейс"
+  },
+  "tracerouteViaAnyOption": {
+    "message": "Любой"
   }
 }
