(chore) uiExtension/extendMenu3x: rename 'Diagnostics -> DSL' menu item to 'DSL diagnostics'

--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -66,6 +66,9 @@
   "HECErrorsInterleaved": {
     "message": "Ошибки HEC"
   },
+  "DSLDiagnosticsMenuItem": {
+    "message": "Статистика DSL"
+  },
   "RoutesToolbarExportSelectedBtnLabel": {
     "message": "Экспортировать выбранные"
   },
