--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -66,6 +66,9 @@
   "HECErrorsInterleaved": {
     "message": "HEC errors"
   },
+  "DSLDiagnosticsMenuItem": {
+    "message": "DSL Statistics"
+  },
   "RoutesToolbarExportSelectedBtnLabel": {
     "message": "Export selected"
   },
