--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -67,7 +67,7 @@
     "message": "HEC errors"
   },
   "DSLDiagnosticsMenuItem": {
-    "message": "DSL Statistics"
+    "message": "DSL statistics"
   },
   "RoutesToolbarExportSelectedBtnLabel": {
     "message": "Export selected"
