(feat.) uiExtension/markPrivateMacs: mark devices with private MAC addresses

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -281,5 +281,8 @@
   },
   "tracerouteViaAnyOption": {
     "message": "Any"
+  },
+  "deviceListsPrivateMac": {
+    "message": "This device uses a private Wi-Fi MAC address"
   }
 }
