--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -80,5 +80,8 @@
   },
   "tracerouteViaAnyOption": {
     "message": "Herhangi bir arayüz"
+  },
+  "deviceListsPrivateMac": {
+    "message": "Bu cihaz Özel Wi-Fi MAC (random MAC) kullanıyor"
   }
 }
