--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -281,5 +281,8 @@
   },
   "tracerouteViaAnyOption": {
     "message": "Любой"
+  },
+  "deviceListsPrivateMac": {
+    "message": "Это устройство использует частный случайный MAC-адрес в беспроводной сети"
   }
 }
