(chore) app/_locales/: update 'deviceListsPrivateMac' l10n string

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -283,6 +283,6 @@
     "message": "Any"
   },
   "deviceListsPrivateMac": {
-    "message": "This device uses a private Wi-Fi MAC address"
+    "message": "This device uses a private MAC address"
   }
 }
