--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -283,6 +283,6 @@
     "message": "Любой"
   },
   "deviceListsPrivateMac": {
-    "message": "Это устройство использует частный случайный MAC-адрес в беспроводной сети"
+    "message": "Это устройство использует частный случайный MAC-адрес"
   }
 }
