--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -82,6 +82,6 @@
     "message": "Herhangi bir arayüz"
   },
   "deviceListsPrivateMac": {
-    "message": "Bu cihaz Özel Wi-Fi MAC (random MAC) kullanıyor"
+    "message": "Bu cihaz Özel MAC (random MAC) kullanıyor"
   }
 }
